# jukebox

./: .gitignore  Cargo.toml  README.md  application.yml  flake.nix
src/: client.rs  config.rs  crypto.rs  discord.rs  incoming_payloads.rs  lib.rs  main.rs  opus_file.rs  opus_parse.rs  server.rs  utils.rs  voice.rs  webm_parse.rs  websocket.rs
src/client/: payloads.rs  player.rs
src/client/payloads/: transformations.rs
src/discord/: payloads.rs  voice.rs
src/discord/voice/: gateway.rs  udp.rs
src/incoming_payloads/: transformations.rs
src/server/: filters.rs  routes.rs
src/voice/: gateway.rs  payloads.rs  udp.rs
