[package]
name = "jukebox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
tokio = { version = "1", features = ["full"] }
opus = "0.3.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
futures-util = "0.3.24"
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
url = "2.3.1"
anyhow = "1.0.66"
serde_with = "2.0.1"
byteorder = "1.4.3"
thiserror = "1.0.37"
serde_yaml = "0.9.14"
xsalsa20poly1305 = "0.9.0"
rand = "0.8.5"
log = "0.4.20"
env_logger = "0.11.2"
ogg = { version = "0.9.1", features = ["async", "tokio"] }
packed_struct = "0.10.1"
tokio-stream = "0.1.14"
bytes = "1.5.0"
