[package]
name = "jukebox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
futures-util = "0.3.30"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
anyhow = "1.0.80"
serde_with = "3.6.1"
byteorder = "1.5.0"
thiserror = "1.0.57"
serde_yaml = "0.9.32"
rand = "0.8.5"
log = "0.4.20"
env_logger = "0.11.2"
packed_struct = "0.10.1"
tokio-stream = "0.1.14"
crypto_secretbox = "0.1.1"
