[package]
name = "jukebox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.7"
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
url = "2.5.4"
anyhow = "1.0.97"
serde_with = "3.12.0"
byteorder = "1.5.0"
thiserror = "2.0.12"
serde_yaml = "0.9.34"
rand = "0.8.5"
packed_struct = "0.10.1"
tokio-stream = "0.1.17"
crypto_secretbox = "0.1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tracing-appender = "0.2"
time = "0.3.41"